@@ -7,6 +7,7 @@ $Id$
 	Allow TERMINFO to be overridden in the envrionment
 	Command line arg -D turns on debugging and deletes previous
 	  debugging file
+	Do ~ expansion in 'dump' command.
 	
 2.0.13
 	Changed startup message for new mailing list
